--- a/alin.html
+++ b/alin.html
@@ -4,7 +4,7 @@
      </head>
  <style>
     body{
-    background-image:url('f1-home-page-tile-2024.jpg');
+    background-image:url("https://i.ibb.co/60LdtDR/f1-home-page-tile-2024.jpg");
     }
     </style>
              <ul>
@@ -17,7 +17,7 @@
              <a herf="#"> <button class="btn">SEARCH</button></a>
          </div>
          <monaco><b><center><h1><font color="yellow"><u>!!FORMULA ONE!!</monaco></b></center></h1></u></font>
-        <img src="F1_(registered_trademark).svg.png" alt="01" width="100" justify-content="left">
+        <img src="https://i.ibb.co/QNDmJHt/F1-registered-trademark-svg.png" alt="01" width="100" justify-content="left">
         <p><font color="sky blue"><b> 
             What it is
 
@@ -58,9 +58,9 @@ F1 races are held on purpose-built circuits or closed roads in multiple countrie
     <center><button width="500"><width="300"><width="300">CREATE AN ACCOUNT </button></center></width>
     <u><b><center><h1><font color="yellow">HERE ARE SOME IMAGES RELATED TO F1</font></h1></center></b></u>
    <right></font>
-   <center> <font color="white"><p> LEWISH HAMILTON IN MERCEDES.</p><img src="c.webp" alt="02" width="300"></right>
+   <center> <font color="white"><p> LEWISH HAMILTON IN MERCEDES.</p><img src="https://i.ibb.co/nb4yPp8/c.webp" alt="c" border="0" width="300"/></right>
       <p> FERRARI AND THERI F1 DRIVERS.</p>
-        <img src="desktop-wallpaper-curious-open-f1-2021-carlos-sainz-ferrari.jpg" alt="01" width="300">
+        <img src="https://i.ibb.co/1GvfDXW/desktop-wallpaper-curious-open-f1-2021-carlos-sainz-ferrari.jpg" alt="desktop-wallpaper-curious-open-f1-2021-carlos-sainz-ferrari" border="0" width="300"/>
        <p> SF-90, itally.</p> 
-        <img src="D_NQ_NP_965575-MLM44632963988_012021-O.webp" alt="01" width="300"></font></center>
+        <img src="https://i.ibb.co/QpWBYXf/D-NQ-NP-965575-MLM44632963988-012021-O.webp" alt="D-NQ-NP-965575-MLM44632963988-012021-O" border="0" width="300" /></font></center>
         <p><b><h1><font color="gold">@copyright of this webpage is reserved by <font color="red">ALIN BHUSAL</font> / CREATOR OF THIS page.
